# Programacion_Estructurada

./: CMakeLists.txt  README.md  main.c  main.h
EJERCICIO_1/: Estudiante.c  Estudiante.h
EJERCICIO_2/: Uniones.c  Uniones.h
EJERCICIO_3/: Copia_Estructura.h
EJERCICIO_4/: Alias.c  Alias.h
EJERCICIO_5/: Funciones.c  Funciones.h
